# advent-of-code-2022

./: Cargo.toml  README  README.md
.hooks/: pre-push
day-1/puzzle-1/src/: main.rs
day-1/puzzle-2/: Cargo.toml
day-1/puzzle-2/src/: main.rs
solutions/day-1-puzzle-1/: Cargo.toml
solutions/day-1-puzzle-1/src/: main.rs
solutions/day-1-puzzle-2/: Cargo.toml
solutions/day-1-puzzle-2/src/: main.rs
solutions/day-2-puzzle-1/: Cargo.toml
solutions/day-2-puzzle-1/src/: main.rs
solutions/day-2-puzzle-2/: Cargo.toml
solutions/day-2-puzzle-2/src/: main.rs
solutions/day-3-puzzle-1/: Cargo.toml
solutions/day-3-puzzle-1/src/: main.rs
solutions/day-3-puzzle-2/: Cargo.toml
solutions/day-3-puzzle-2/src/: main.rs
src/: main.rs
src/puzzles/day_1/: puzzle_1.rs  puzzle_2.rs
src/puzzles/day_10/: computer.rs  mod.rs  puzzle_1.rs  puzzle_2.rs
src/puzzles/day_11/: mod.rs  monkey.rs  puzzle_1.rs  puzzle_2.rs
src/puzzles/day_2/: puzzle_1.rs  puzzle_2.rs
src/puzzles/day_3/: puzzle_1.rs  puzzle_2.rs
src/puzzles/day_4/: puzzle_1.rs  puzzle_2.rs
src/puzzles/day_5/: mod.rs  puzzle_1.rs  puzzle_2.rs  stack.rs
src/puzzles/day_6/: buffer.rs  mod.rs  puzzle_1.rs  puzzle_2.rs
src/puzzles/day_7/: dir.rs  mod.rs  puzzle_1.rs  puzzle_2.rs
src/puzzles/day_8/: mod.rs  puzzle_1.rs  puzzle_2.rs
src/puzzles/day_9/: puzzle_1.rs  puzzle_2.rs
